force-app/main/default/objects/Audit_Response__c/Audit_Response__c.object-meta.xml
<CustomObject>
    <label>Audit Response</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Audit Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>