force-app/main/default/objects/Audit_Response__c/fields/Audit__c.field-meta.xml
<CustomField>
    <fullName>Audit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Audit</label>
    <referenceTo>Audit__c</referenceTo>
    <relationshipLabel>Audit Responses</relationshipLabel>
    <relationshipName>Audit_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>