force-app/main/default/objects/Audit_Response__c/fields/Audit_Question__c.field-meta.xml
<CustomField>
    <fullName>Audit_Question__c</fullName>
    <label>Audit Question</label>
    <referenceTo>Audit_Question__c</referenceTo>
    <relationshipLabel>Audit Responses</relationshipLabel>
    <relationshipName>Audit_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>