force-app/main/default/objects/Audit_Response__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Audit Responses</relationshipLabel>
    <relationshipName>Audit_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>